<resources>
    <string name="app_name">LebDrive</string>
    <string name="start_btn_txt">Get Started</string>
    <string name="info_btn_txt">Information</string>
    <string name="about_btn_txt">About us</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <!-- Strings used for notifications -->
    <string name="channel_name">LebDrive Notifications</string>
    <string name="channel_description">Testing LebDrive Notifications</string>

    <!-- Strings used for the about us page -->
    <string name="about_us1_txt">LebDrive is an application that aims to prepare candidates for their theoretical test drive or as we call "Fa7es el Nazare".</string>
    <string name="about_us2_txt">LebDrive was fully developed and designed by a university student who, as you are, was not capable of studying for the test through a book.</string>
    <string name="about_us3_txt">LebDrive will help you mark your test date and notify you one day prior to it. It also locates the various test centers. In addition, it is available in 3 different languages (Arabic, English and French).</string>

    <!--    Strings used for tests descriptions-->
    <string name="full_test_txt">Once you are ready, you can start with the full test. This is the official exam. It consists of 20 random driving law questions and 10 signs questions. You have 15 minutes to complete the test. You must score 25 or above to pass.</string>
    <string name="signs_test_txt">This is a signs-only test. You will only be asked on the significance of 30 random signs. Score 25 or above to pass the test.</string>
    <string name="questions_test_txt">This is a question-only test. It consists of 30 random questions. You will not be asked on signs. Score 25 or above to pass the test.</string>

    <!--    Strings for languages-->
    <string-array name="languages_array">
        <item>AR</item>
        <item>EN</item>
        <item>FR</item>
    </string-array>

    <!--    Strings for final score-->
    <string name="fail_text_eng">You failed. Practice more!</string>
    <string name="need_more_practice_txt_eng">You passed. Although consider more practice!</string>
    <string name="success_txt_eng">Excellent, you passed. Practice if you feel like it!</string>
    <string name="fail_text_fr">Vous avez échoué. Pratiquez plus!</string>
    <string name="need_more_practice_txt_fr">Tu es passé. Bien envisager plus de pratique!</string>
    <string name="success_txt_fr">Excellent, vous avez réussi. Pratiquez si vous en avez envie!</string>
    <string name="fail_text_ar">لم تنجح. تمرن اكثر!</string>
    <string name="need_more_practice_txt_ar">لقد نجحت. لكن فكر في مزيد من الممارسة!</string>
    <string name="success_txt_ar">ممتاز ، لقد نجحت. تدرب إذا كنت ترغب في ذلك!</string>
    <string name="finish_txt_eng">You finished the test! Your score is:</string>
    <string name="finish_txt_fr">Vous avez terminé le test! Votre score est:</string>
    <string name="finish_txt_ar">لقد انتهيت من الاختبار! نتيجتك هي:</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>