<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:id="@+id/app_logo"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/get_test_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="testBtnClicked"
            android:layout_marginTop="50dp"
            android:text="@string/start_btn_txt" />

        <Button
            android:id="@+id/info_btn"
            android:layout_width="150dp"
            android:onClick="infoBtnClicked"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/info_btn_txt" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="aboutBtnClicked"
            android:text="@string/about_btn_txt" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:onClick="calendarBtnClicked"
        android:src="@drawable/outline_event_white_24" />

    <FrameLayout
        android:id="@+id/quiz_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="5dp"
        android:hint="@string/app_name" />
</LinearLayout>